# AMP

./: README.md
AMP-RFCs/: 0001-local-transport-profile.md  0002-core-object-model.md  0003-artifact-and-reference-model.md  0004-canonical-envelope-and-integrity-binding.md  0005-approval-lifecycle-and-decision-binding.md  0006-continuity-and-memory-authority.md  0007-core-envelopes-and-compact-schemas.md
conformance/: local-uds-v1-checklist.md
design_overview/: amp_implementation_mapping.md
reference/python/: README.md  pyproject.toml
reference/python/amp/: __init__.py  canonical_json.py  envelope.py  validation.py
reference/python/tests/: test_vectors.py
