[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amp-protocol"
version = "0.1.0"
description = "Reference implementation of AMP (Authority Mediation Protocol) canonical envelope, signing, and verification."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.hatch.build.targets.wheel]
packages = ["amp"]
